# FastAPI

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  kube.yaml  pyproject.toml  requirements.txt  workflow.yaml
.github/workflows/: docker-image.yml  workflow.yaml
app/: lifespan.py  main.py  models.py  routes.py
app/alembic/: env.py
app/alembic/versions/: f17cd12b8122_test1.py
app/config/: settings.py
app/database/: engine.py
app/db/: database.py
app/models/: user.py
app/users/: models.py  routes.py  schemas.py
src/pdm_fastapi/: __main__.py
