[project]
name = "bethery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "T",
    "F",
]
extend-select = [
    "I",
]

